# GPU_Capstone_Project

./: .gitignore  CMakeLists.txt  INSTALL.md  PRESENTATION.md  PROJECT_SUMMARY.md  README.md
include/: image_kernels.cuh  image_processor.h
src/: generate_test_image.cpp  image_kernels.cu  image_processor.cpp  main.cpp
